refactor block gallery final

--- a/view/editor/style/frame.css
+++ b/view/editor/style/frame.css
@@ -254,6 +254,10 @@ body.dragging .lp-button {
     z-index: 2001;
 }
 
+.services_6 .text_toolbar {
+  width: 194px;
+}
+
 [data-editor="lp.icon"] .ico {
     position: relative;
 }
