--- a/view/editor/lib/bxSlider/jquery.bxslider.css
+++ b/view/editor/lib/bxSlider/jquery.bxslider.css
@@ -22,8 +22,9 @@
 }
 
 .bx-wrapper img {
-	max-width: 100%;
-	display: block;
+	height: auto;
+    display: block;
+    max-width: 100%;
 }
 
 /** THEME
